--- a/cli/Cargo.toml
+++ b/cli/Cargo.toml
@@ -38,7 +38,7 @@ ratatui = "0.30"
 rcgen = { workspace = true }
 rustls = { workspace = true, features = ["aws-lc-rs"] }
 s2-lite = { workspace = true }
-s2-sdk = { version = "0.24.0", features = ["_hidden"] }
+s2-sdk = { workspace = true, features = ["_hidden"] }
 serde = { workspace = true, features = ["derive"] }
 serde_json = { workspace = true, features = ["preserve_order"] }
 slatedb = { workspace = true }
