--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -137,8 +137,8 @@ jobs:
           }
         ]
 
-  rust-sdk-tests:
-    name: Rust SDK Tests
+  rust-sdk:
+    name: Rust SDK
     needs: [test, clippy, changes]
     if: needs.changes.outputs.sdk == 'true'
     runs-on: ubuntu-latest
@@ -146,7 +146,11 @@ jobs:
       - uses: actions/checkout@v4
       - uses: dtolnay/rust-toolchain@stable
       - uses: Swatinem/rust-cache@v2
-      - name: Run SDK tests
+      - name: Check docs
+        run: cargo doc -p s2-sdk --all-features --no-deps
+        env:
+          RUSTDOCFLAGS: "-D warnings"
+      - name: Run tests
         run: cargo test -p s2-sdk --all-features
         env:
           S2_ACCESS_TOKEN: ${{ secrets.S2_ACCESS_TOKEN_FOR_RUST_SDK_TESTS }}
