--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -81,14 +81,11 @@ jobs:
       - name: Test template rendering (default)
         run: helm template test-release charts/s2-lite --dry-run > /dev/null
 
-      - name: Test with TLS enabled
-        run: helm template test-release charts/s2-lite --set tls.enabled=true --dry-run > /dev/null
+      - name: Test with TLS self-signed
+        run: helm template test-release charts/s2-lite --set tls.enabled=true --set tls.selfSigned=true --dry-run > /dev/null
 
-      - name: Test with localStorage PVC
-        run: helm template test-release charts/s2-lite --set localStorage.enabled=true --set localStorage.persistentVolumeClaim.enabled=true --dry-run > /dev/null
-
-      - name: Test with localStorage emptyDir
-        run: helm template test-release charts/s2-lite --set localStorage.enabled=true --dry-run > /dev/null
+      - name: Test with TLS provided cert
+        run: helm template test-release charts/s2-lite --set tls.enabled=true --set tls.cert=/etc/tls/tls.crt --set tls.key=/etc/tls/tls.key --dry-run > /dev/null
 
       - name: Test with S3 object storage
         run: helm template test-release charts/s2-lite --set objectStorage.enabled=true --set objectStorage.bucket=test-bucket --dry-run > /dev/null
@@ -103,17 +100,6 @@ jobs:
             --set objectStorage.endpoint=https://s3.amazonaws.com \
             --set metrics.serviceMonitor.enabled=true \
             --dry-run > /dev/null
-
-      - name: Test conflicting storage fails
-        run: |
-          if helm template test-release charts/s2-lite \
-            --set objectStorage.enabled=true \
-            --set objectStorage.bucket=test-bucket \
-            --set localStorage.enabled=true \
-            --dry-run 2>&1; then
-            echo "Expected failure but got success"
-            exit 1
-          fi
 
   build-server:
     name: Build s2-lite
