--- a/charts/s2-lite/templates/deployment.yaml
+++ b/charts/s2-lite/templates/deployment.yaml
@@ -66,7 +66,7 @@ spec:
         env:
         {{- if and .Values.objectStorage.enabled .Values.objectStorage.endpoint }}
         - name: AWS_ENDPOINT_URL_S3
-          value: {{ .Values.objectStorage.endpoint }}
+          value: {{ .Values.objectStorage.endpoint | quote }}
         {{- end }}
         {{- with .Values.env }}
         {{- toYaml . | nindent 8 }}
