--- a/.github/workflows/bump-chart-version.yml
+++ b/.github/workflows/bump-chart-version.yml
@@ -16,9 +16,13 @@ jobs:
       - name: Bump chart patch version
         run: |
           CURRENT_VERSION=$(grep '^version:' charts/s2-lite/Chart.yaml | awk '{print $2}')
+          if [ -z "$CURRENT_VERSION" ]; then
+            echo "ERROR: Could not read current chart version"
+            exit 1
+          fi
           echo "Current chart version: $CURRENT_VERSION"
 
-          NEW_VERSION=$(echo $CURRENT_VERSION | awk -F. '{$NF = $NF + 1; print}' OFS=.)
+          NEW_VERSION=$(echo "$CURRENT_VERSION" | awk -F. '{$NF = $NF + 1; print}' OFS=.)
           echo "New chart version: $NEW_VERSION"
 
           sed -i "s/^version: .*/version: $NEW_VERSION/" charts/s2-lite/Chart.yaml
