--- a/.github/workflows/release-cli.yml
+++ b/.github/workflows/release-cli.yml
@@ -26,21 +26,16 @@ jobs:
           ref: main
           token: ${{ secrets.RELEASE_PAT }}
 
-      - name: Get version
+      - name: Get version from tag
         id: version
-        uses: SebRollen/toml-action@v1.2.0
-        with:
-          file: cli/Cargo.toml
-          field: package.version
-
-      - name: Validate version
         run: |
-          VERSION="${{ steps.version.outputs.value }}"
+          VERSION="${GITHUB_REF_NAME#s2-cli-v}"
           if [ -z "$VERSION" ]; then
-            echo "ERROR: Could not read version from Cargo.toml"
+            echo "ERROR: Could not extract version from tag"
             exit 1
           fi
           echo "CLI version: $VERSION"
+          echo "value=$VERSION" >> "$GITHUB_OUTPUT"
 
       - name: Update Helm chart version and appVersion
         run: |
