--- a/.github/workflows/release-cli.yml
+++ b/.github/workflows/release-cli.yml
@@ -30,8 +30,8 @@ jobs:
         id: version
         run: |
           VERSION="${GITHUB_REF_NAME#s2-cli-v}"
-          if [ -z "$VERSION" ]; then
-            echo "ERROR: Could not extract version from tag"
+          if [ -z "$VERSION" ] || [ "$VERSION" = "$GITHUB_REF_NAME" ]; then
+            echo "ERROR: Could not extract version from tag (GITHUB_REF_NAME=$GITHUB_REF_NAME)"
             exit 1
           fi
           echo "CLI version: $VERSION"
